--- a/src/pages/authentication/auth.module.css
+++ b/src/pages/authentication/auth.module.css
@@ -1,5 +1,7 @@
 .App {
-    margin-top: 100px;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
 }
 
